# template-python

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: auto-tag.yml  ci.yml  docs.yml  pr-agent.yml  release.yml  template-cleanup.yml
api-reference/: index.html
docs/: api-reference.md  index.md
search/: search_index.json
src/project_name/: __init__.py
tests/: test_smoke.py
